Avoid grid items overflow

--- a/css/main.css
+++ b/css/main.css
@@ -78,18 +78,18 @@ th {
 
 .grid-container {
 	display: grid;
-	grid-template-columns: 3% 30% 3% 30% 3% 30%;
+	grid-template-columns: 5% 20% 5% 20% 5% 20% 5% 20%;
 }
 
 @media (max-width: 1800px) {
 	.grid-container {
-		grid-template-columns: 7% 43% 7% 43%;
+		grid-template-columns: 10% 40% 10% 40%;
 	}
 }
 
 @media (max-width: 1000px) {
 	.grid-container {
-		grid-template-columns: 15% 85%;
+		grid-template-columns: auto auto;
 	}
 }
 
